# cargo-hatch

./: .editorconfig  .gitignore  Cargo.toml  README.md  USAGE.md  deny.toml
examples/basic/: .hatch.toml  .hatchignore  hello.txt
examples/basic/sub/: .hatch.toml  sample.json
examples/binlib/: .hatch.toml  Cargo.toml
examples/binlib/src/: lib.rs
examples/conditions/: .hatch.toml  order.txt
examples/server/: .hatch.toml  Cargo.toml
examples/strings/: .hatch.toml  Cargo.toml
examples/strings/src/: main.rs
src/: cargo.rs  cli.rs  dirs.rs  lib.rs  main.rs  repo.rs  templates.rs
src/settings/: global.rs  mod.rs
src/settings/repo/: bool_reader.rs  de.rs  defaults.rs  list_reader.rs  mod.rs  multi_list_reader.rs  number_reader.rs  prompts.rs  string_reader.rs  validators.rs
src/templates/: filter.rs  mod.rs
