[package]
name = "cargo-hatch"
version = "0.3.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
readme = "README.md"
description = "Hatch new projects like a chick coming out of its egg."
homepage = "https://github.com/dnaka91/cargo-hatch"
repository = "https://github.com/dnaka91/cargo-hatch"
categories = ["development-tools", "development-tools::cargo-plugins"]
keywords = ["cargo", "cargo-subcommand", "cli", "crates", "template"]
include = ["tests/**/*", "src/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow = "1.0.57"
camino = { version = "1.0.9", features = ["serde1"] }
check_keyword = "0.2.0"
clap = { version = "3.2.1", features = ["derive"] }
clap_complete = "3.2.1"
crates-index = { version = "0.18.8", default-features = false }
crossterm = "0.21.0"
directories = "4.0.1"
git2 = "0.14.4"
globset = "0.4.9"
ignore = "0.4.18"
indexmap = { version = "1.8.2", features = ["serde-1"] }
inquire = "0.2.1"
mime_guess = "2.0.4"
num-traits = "0.2.15"
regex = "1.5.6"
semver = "1.0.10"
serde = { version = "1.0.137", features = ["derive"] }
serde_with = { version = "1.14.0", default-features = false }
tera = "1.16.0"
thiserror = "1.0.31"
toml = "0.5.9"
toml_edit = "0.14.4"
unicode-ident = "1.0.1"

[dev-dependencies]
dir-diff = "0.3.2"
tempfile = "3.3.0"

[profile.release]
lto = true
strip = true
