[package]
name = "cargo-hatch"
version = "0.4.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
rust-version = "1.62"
license = "AGPL-3.0-only"
readme = "README.md"
description = "Hatch new projects like a chick coming out of its egg."
homepage = "https://github.com/dnaka91/cargo-hatch"
repository = "https://github.com/dnaka91/cargo-hatch"
categories = ["development-tools", "development-tools::cargo-plugins"]
keywords = ["cargo", "cargo-subcommand", "cli", "crates", "template"]
include = ["tests/**/*", "src/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow = "1.0.65"
camino = { version = "1.1.1", features = ["serde1"] }
check_keyword = "0.2.0"
clap = { version = "4.0.14", features = ["derive"] }
clap_complete = "4.0.2"
clap_mangen = "0.2.2"
crates-index = { version = "0.18.10", default-features = false }
crossterm = "0.25.0"
directories = "4.0.1"
git2 = "0.15.0"
globset = "0.4.9"
ignore = "0.4.18"
indexmap = { version = "1.9.1", features = ["serde-1"] }
inquire = "0.4.0"
mime_guess = "2.0.4"
num-traits = "0.2.15"
regex = "1.6.0"
semver = "1.0.14"
serde = { version = "1.0.145", features = ["derive"] }
tera = "1.17.1"
thiserror = "1.0.37"
toml = "0.5.9"
toml_edit = "0.14.4"
unicode-ident = "1.0.5"

[dev-dependencies]
dir-diff = "0.3.2"
tempfile = "3.3.0"

[profile.release]
lto = true
strip = true
