[package]
name = "cargo-hatch"
version = "0.4.3"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
rust-version = "1.62"
license = "AGPL-3.0-only"
readme = "README.md"
description = "Hatch new projects like a chick coming out of its egg."
homepage = "https://github.com/dnaka91/cargo-hatch"
repository = "https://github.com/dnaka91/cargo-hatch"
categories = ["development-tools", "development-tools::cargo-plugins"]
keywords = ["cargo", "cargo-subcommand", "cli", "crates", "template"]
include = ["tests/**/*", "src/**/*", "LICENSE", "README.md"]

[badges.maintenance]
status = "deprecated"

[dependencies]
anyhow = "1.0.71"
basic-toml = "0.1.2"
camino = { version = "1.1.4", features = ["serde1"] }
check_keyword = "0.2.0"
clap = { version = "4.0.32", features = ["derive"] }
clap_complete = "4.0.7"
clap_mangen = "0.2.6"
crates-index = { version = "0.19.10", default-features = false }
crossterm = "0.26.1"
directories = "5.0.1"
git2 = "0.17.2"
globset = "0.4.10"
ignore = "0.4.20"
indexmap = { version = "1.9.3", features = ["serde-1"] }
inquire = "0.6.2"
mime_guess = "2.0.4"
num-traits = "0.2.15"
regex = "1.8.3"
semver = "1.0.17"
serde = { version = "1.0.163", features = ["derive"] }
tera = "1.19.0"
thiserror = "1.0.40"
toml_edit = "0.19.8"
unicode-ident = "1.0.9"

[dev-dependencies]
dir-diff = "0.3.2"
tempfile = "3.5.0"

[profile.release]
lto = true
strip = true
